namespace Misc
{
    public static class Const
    {
        public struct FighterAnimations
        {
            public static string FIGHTER_MOVE = "isMoving";
            public static string FIGHTER_ATTACK = "isAttacking";
            public static string FIGHTER_DEAD = "isDead";
        }
    }
}